mine_sweeper: Fix default size and visibility

--- a/templates/mine_sweeper.css
+++ b/templates/mine_sweeper.css
@@ -1,6 +1,5 @@
 #game_board {
     display: flex;
-    min-height: 700px;
 }
 
 .half_container {
